added spring-boot-security-saml files and dependency into pom.xml

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -98,3 +98,5 @@ jhipster:
 # ===================================================================
 
 application:
+
+logging.level.org.springframework.security.saml: DEBUG
