--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 
 
     <dependencies>
+    	<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>spring-boot-security-saml</artifactId>
+			<version>1.10</version>
+		</dependency>
         <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster</artifactId>
