updated for compilng

--- a/pom.xml
+++ b/pom.xml
@@ -247,7 +247,7 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
-            <scope>test</scope>
+<!--             <scope>test</scope> -->
         </dependency>
         <dependency>
             <groupId>org.ehcache</groupId>
